@@ -15,6 +15,10 @@ the CVS logs is updated daily at the following URL:
 Version 4.10.0-beta3
 --------------------
 
+- Web Map Context use format metadata when formatlist not available. (bug 1723)
+
+- Web Map Context boolean values true/false now interpreted. (bug 1692)
+
 - Added support for MULTIPOLYGON and MULTILINESTRING in msShapeFromWKT()
   when going through OGR (i.e. GEOS disabled) (bug 1891)
 
